# Mailing-list-management-service

./: README.md  pyproject.toml
blog/migrations/: 0001_initial.py
blog/templates/blog/: blogpost_detail.html  blogpost_form.html
config/: settings.py
mailing/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
mailing/management/commands/: runapscheduler.py
mailing/migrations/: 0001_initial.py
mailing/templates/mailing/: base.html  customer_list.html  index.html
users/migrations/: 0001_initial.py
users/templates/users/: login.html
