[tool.poetry]
name = "coursework6"
version = "0.1.0"
description = ""
authors = ["ika <mamina747@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
psycopg2-binary = "^2.9.9"
django-apscheduler = "^0.7.0"
black = "^24.8.0"
services = "^0.1.1"
pillow = "^10.4.0"
python-dotenv = "^1.0.1"
ipython = "^8.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
